--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <h1>users/edit</h1>
+<h1>Edit User</h1>
+<form action="#" th:action="@{/users/{id}(id=${user.id})}" th:object="${user}" method="post">
+    <label for="userName" title="Name">User name</label>
+    <p><input id="userName" type="text" th:field="*{userName}"/></p>
+    <label for="userSurname" title="Surname">User surname</label>
+    <p><input id="userSurname" type="text" th:field="*{userSurname}" /></p>
+
+    <table>
+        <tr>
+            <td>Select user type</td>
+        </tr>
+        <tr>
+            <td>
+                <select id="selectType" th:field="*{userType}">
+                    <option value="Admin">Admin</option>
+                    <option value="Client">Client</option>
+                    <option value="ResourceAdministrator">ResourceAdministrator</option>
+                </select>
+            </td>
+        </tr>
+    </table>
+
+    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+</form>
 </body>
 </html>
