--- a/src/main/resources/templates/developers/edit.html
+++ b/src/main/resources/templates/developers/edit.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit Developer</title>
 </head>
 <body>
-    <h1>developers/edit</h1>
+    <h1>Edit Developer</h1>
+    <form action="#" th:action="@{/developers/{id}(id=${developer.id})}" th:object="${developer}" method="post">
+        <label for="developerName" title="Name">Developer name</label>
+        <p><input id="developerName" type="text" th:field="*{developerName}"/></p>
+        <label for="developerSurname" title="Surname">Developer surname</label>
+        <p><input id="developerSurname" type="text" th:field="*{developerSurname}" /></p>
+        <table>
+            <tr>
+                <td>Select technology</td>
+            </tr>
+            <tr>
+                <td>
+                    <select id="selectType" th:field="${technology.technologyName}">
+                        <option th:each="technology : ${technologies}"
+                                th:value="${technology.technologyName}"
+                                th:text="${technology.technologyName}"></option>
+                    </select>
+                </td>
+            </tr>
+        </table>
+        <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    </form>
 </body>
 </html>
