--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -9,7 +9,7 @@
     <thead>
     <tr>
         <th>Start Date</th>
-        <th>End Date</th>
+        <th>State/End Date</th>
         <th>User</th>
         <th>Developer</th>
     </tr>
@@ -20,16 +20,16 @@
     </tr>
     <tr th:each="event : ${events}">
         <td>
-            <span th:text="${event.startData}">Start Date</span>
+            <span th:text="${event.startData}"></span>
         </td>
         <td>
-            <span th:text="${event.endData}">End Date</span>
+            <span th:text="${event.ongoing} ? 'Ongoing' : ${event.endData}" ></span>
         </td>
         <td>
-            <span th:text="${event.user.userName}">User</span>
+            <span th:text="${event.user.userName}"></span>
         </td>
         <td>
-            <span th:text="${event.developer}">Developer</span>
+            <span th:text="${event.developer}"></span>
         </td>
         <td>
             <form th:action="@{/events/{id}/delete(id=${event.id})}" th:method="delete">
@@ -39,6 +39,11 @@
         <td>
             <form th:action="@{/events/{id}/edit(id=${event.id})}" method="get">
                 <input type="submit" value="edit" />
+            </form>
+        </td>
+        <td>
+            <form th:action="@{/events/{id}/end(id=${event.id})}" method="post">
+                <input type="submit" value="end" />
             </form>
         </td>
     </tr>
