--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Edit User</h1>
-<form action="#" th:action="@{/users/{id}(id=${user.id})}" th:object="${user}" method="post">
+<form action="#" th:action="@{/users/{id}(id=${user.userId})}" th:object="${user}" method="post">
     <label for="userName" title="Name">User name</label>
     <p><input id="userName" type="text" th:field="*{userName}"/></p>
     <label for="userSurname" title="Surname">User surname</label>
