[Add] remove end button after ending event

--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -37,7 +37,7 @@
             </form>
         </td>
         <td>
-            <form th:action="@{/events/{id}/end(id=${event.id})}" method="post">
+            <form th:if="${event.endData == null}" th:action="@{/events/{id}/end(id=${event.id})}" method="post">
                 <input type="submit" value="end" />
             </form>
         </td>
