--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -23,7 +23,7 @@
             <span th:text="${event.startData}"></span>
         </td>
         <td>
-            <span th:text="${event.ongoing} ? 'Ongoing' : ${event.endData}" ></span>
+            <span th:text="${event.endData}" ></span>
         </td>
         <td>
             <span th:text="${event.user.userName}"></span>
@@ -32,7 +32,7 @@
             <span th:text="${event.developer}"></span>
         </td>
         <td>
-            <form th:action="@{/events/{id}/delete(id=${event.id})}" th:method="delete">
+            <form th:if="${event.endData == null}" th:action="@{/events/{id}/delete(id=${event.id})}" th:method="delete">
                 <input type="submit" value="remove" />
             </form>
         </td>
