--- a/src/main/resources/templates/technologies/index.html
+++ b/src/main/resources/templates/technologies/index.html
@@ -5,22 +5,24 @@
     <title>Title</title>
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th>Technology Name</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:if="${technologies.empty}">
-        <td colspan="2">empty</td>
-    </tr>
-    <tr th:each="technology : ${technologies}">
-        <td>
-            <span th:text="${technology.technologyName}">Name</span>
-        </td>
-    </tr>
-    </tbody>
-</table>
+    <div>
+        <table>
+            <thead>
+            <tr>
+                <th>Technology Name</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:if="${technologies.empty}">
+                <td colspan="2">empty</td>
+            </tr>
+            <tr th:each="technology : ${technologies}">
+                <td>
+                    <span th:text="${technology.technologyName}">Name</span>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
