--- a/src/main/resources/templates/developers/new.html
+++ b/src/main/resources/templates/developers/new.html
@@ -1,35 +1,19 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Add Developer</h1>
-    <form action="#" th:action="@{/developers}" th:object="${developer}" method="post">
-        <label for="developerName" title="Name">Developer name</label>
-        <p><input id="developerName" type="text" th:field="${developer.developerName}"/></p>
-        <p th:if="${#fields.hasErrors('developerName')}" th:errors="*{developerName}"></p>
-        <label for="developerSurname" title="Surname">Developer surname</label>
-        <p><input id="developerSurname" type="text" th:field="${developer.developerSurname}" /></p>
-        <p th:if="${#fields.hasErrors('developerSurname')}" th:errors="*{developerSurname}"></p>
-
-        <table>
-            <tr>
-                <td>Select technology</td>
-            </tr>
-            <tr>
-                <td>
-                    <select id="selectType" th:field="${technology.technologyName}">
-                        <option th:each="technology : ${technologies}"
-                                th:value="${technology.technologyName}"
-                                th:text="${technology.technologyName}"></option>
-                    </select>
-                </td>
-            </tr>
-        </table>
-
-        <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-    </form>
-</body>
-</html>
+<div th:fragment="new" xmlns:th="http://www.w3.org/1999/xhtml" class="d-flex justify-content-center ">
+    <div class="d-flex flex-column">
+        <h1>Add Developer</h1>
+        <form class="form-group" action="#" th:action="@{/developers}" th:object="${developer}" method="post">
+            <label for="developerName" title="Name">Developer name</label>
+            <input class="form-control"  id="developerName" type="text" th:field="${developer.developerName}"/>
+            <p th:if="${#fields.hasErrors('developerName')}" th:errors="*{developerName}"></p>
+            <label for="developerSurname" title="Surname">Developer surname</label>
+            <input class="form-control"  id="developerSurname" type="text" th:field="${developer.developerSurname}" />
+            <p th:if="${#fields.hasErrors('developerSurname')}" th:errors="*{developerSurname}"></p>
+            <label for="selectType">Select technology</label>
+            <select class="form-control" id="selectType" th:field="${technology.technologyName}">
+                <option th:each="technology : ${technologies}" th:value="${technology.technologyName}" th:text="${technology.technologyName}"></option>
+            </select>
+            <input class="btn btn-primary" type="submit" value="Submit" />
+            <input class="btn btn-danger" type="reset" value="Reset" />
+        </form>
+    </div>
+</div>
