--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -1,56 +1,52 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Surname</th>
-                <th>Type</th>
-                <th>Is Active</th>
-            </tr>
+<div th:fragment="index" xmlns:th="http://www.w3.org/1999/xhtml">
+    <table class="table">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Surname</th>
+            <th scope="col">Type</th>
+            <th scope="col">Is active</th>
+            <th scope="col">Remove</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Activate or deactivate</th>
+        </tr>
         </thead>
         <tbody>
-            <tr th:if="${users.empty}">
-                <td colspan="2">empty</td>
-            </tr>
-            <tr th:each="user : ${users}">
-                <td>
-                    <span th:text="${user.userName}"></span>
-                </td>
-                <td>
-                    <span th:text="${user.userSurname}"></span>
-                </td>
-                <td>
-                    <span th:text="${user.userType}"></span>
-                </td>
-                <td>
-                    <span th:text="${user.isActive}"></span>
-                </td>
-                <td>
-                    <form th:action="@{/users/{id}/delete(id=${user.userId})}" method="post">
-                        <input type="submit" value="remove" />
-                    </form>
-                </td>
-                <td>
-                    <form th:action="@{/users/{id}/edit(id=${user.userId})}" method="get">
-                        <input type="submit" value="edit" />
-                    </form>
-                </td>
-                <td>
-                    <form th:action="@{/users/{id}/activate-or-deactivate(id=${user.userId})}" method="get">
-                        <input type="submit" value="activate or deactivate" />
-                    </form>
-                </td>
-            </tr>
+        <tr th:if="${users.empty}">
+            <td colspan="2">empty</td>
+        </tr>
+        <tr th:each="user : ${users}">
+            <td>
+                <span th:text="${user.userName}"></span>
+            </td>
+            <td>
+                <span th:text="${user.userSurname}"></span>
+            </td>
+            <td>
+                <span th:text="${user.userType}"></span>
+            </td>
+            <td>
+                <span th:text="${user.isActive}"></span>
+            </td>
+            <td>
+                <form th:action="@{/users/{id}/delete(id=${user.userId})}" method="post">
+                    <input class="btn btn-danger" type="submit" value="remove" />
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/users/{id}/edit(id=${user.userId})}" method="get">
+                    <input class="btn btn-secondary" type="submit" value="edit" />
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/users/{id}/activate-or-deactivate(id=${user.userId})}" method="get">
+                    <input class="btn btn-primary" type="submit" value="activate or deactivate" />
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
     <form th:action="@{/users/new}">
-        <input type="submit" value="Add new user" />
+        <input class="btn btn-success"  type="submit" value="Add new user" />
     </form>
-</body>
-</html>
+</div>
