--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -1,35 +1,21 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Add User</title>
-</head>
-    <body>
+<div xmlns:th="http://www.w3.org/1999/xhtml" class="d-flex justify-content-center">
+    <div class="d-flex flex-column">
         <h1>Add User</h1>
-        <form action="#" th:action="@{/users}" th:object="${user}" method="post">
+        <form class="form-group" action="#" th:action="@{/users}" th:object="${user}" method="post">
             <label for="userName" title="Name">User name</label>
-            <p><input id="userName" type="text" th:field="*{userName}"/></p>
+            <input class="form-control" id="userName" type="text" th:field="*{userName}"/>
             <p th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></p>
             <label for="userSurname" title="Surname">User surname</label>
-            <p><input id="userSurname" type="text" th:field="*{userSurname}" /></p>
+            <input class="form-control" id="userSurname" type="text" th:field="*{userSurname}" />
             <p th:if="${#fields.hasErrors('userSurname')}" th:errors="*{userSurname}"></p>
-
-            <table>
-                <tr>
-                    <td>Select user type</td>
-                </tr>
-                <tr>
-                    <td>
-                        <select id="selectType" th:field="*{userType}">
-                            <option value="Admin">Admin</option>
-                            <option value="Client">Client</option>
-                            <option value="ResourceAdministrator">ResourceAdministrator</option>
-                        </select>
-                    </td>
-                </tr>
-            </table>
-
-            <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+            <label for="selectType">User Type</label>
+            <select class="form-control" id="selectType" th:field="*{userType}">
+                <option value="Admin">Admin</option>
+                <option value="Client">Client</option>
+                <option value="ResourceAdministrator">ResourceAdministrator</option>
+            </select>
+            <input class="btn btn-primary" type="submit" value="Submit" />
+            <input class="btn btn-danger" type="reset" value="Reset" />
         </form>
-    </body>
-</html>
+    </div>
+</div>
