--- a/src/main/resources/templates/developers/new.html
+++ b/src/main/resources/templates/developers/new.html
@@ -4,10 +4,10 @@
         <form class="form-group" action="#" th:action="@{/developers}" th:object="${developer}" method="post">
             <label for="developerName" title="Name">Developer name</label>
             <input class="form-control"  id="developerName" type="text" th:field="${developer.developerName}"/>
-            <p th:if="${#fields.hasErrors('developerName')}" th:errors="*{developerName}"></p>
+            <div th:if="${#fields.hasErrors('developerName')}" th:errors="*{developerName}" class="alert alert-danger" role="alert"></div>
             <label for="developerSurname" title="Surname">Developer surname</label>
             <input class="form-control"  id="developerSurname" type="text" th:field="${developer.developerSurname}" />
-            <p th:if="${#fields.hasErrors('developerSurname')}" th:errors="*{developerSurname}"></p>
+            <div th:if="${#fields.hasErrors('developerSurname')}" th:errors="*{developerSurname}" class="alert alert-danger" role="alert"></div>
             <label for="selectType">Select technology</label>
             <select class="form-control" id="selectType" th:field="${technology.technologyName}">
                 <option th:each="technology : ${technologies}" th:value="${technology.technologyName}" th:text="${technology.technologyName}"></option>
