--- a/src/main/resources/templates/technologies/index.html
+++ b/src/main/resources/templates/technologies/index.html
@@ -1,4 +1,4 @@
-<div th:fragment="index" th:fragment="index" xmlns:th="http://www.w3.org/1999/xhtml">
+<div th:fragment="index" xmlns:th="http://www.w3.org/1999/xhtml">
     <div>
         <table class="table">
             <thead  class="thead-dark">
