--- a/src/main/resources/templates/application/index.html
+++ b/src/main/resources/templates/application/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
+    <div th:replace="fragments/navbar :: navbar"></div>
     <div class="app-container">
         <div th:replace="${page} :: ${template}"></div>
     </div>
