--- a/src/main/resources/templates/application/index.html
+++ b/src/main/resources/templates/application/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/font-awesome.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/layout.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -12,5 +13,6 @@
     <div class="app-container">
         <div th:replace="${page} :: ${template}"></div>
     </div>
+    <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
