--- a/src/main/resources/templates/application/index.html
+++ b/src/main/resources/templates/application/index.html
@@ -11,6 +11,7 @@
 <body>
     <div th:replace="fragments/navbar :: navbar"></div>
     <div class="app-container">
+        <div th:replace="fragments/sidebar :: sidebar"></div>
         <div th:replace="${page} :: ${template}"></div>
     </div>
     <div th:replace="fragments/footer :: footer"></div>
