--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -16,10 +16,10 @@
         </tr>
         <tr th:each="event : ${events}">
             <td>
-                <span th:text="${event.startData}"></span>
+                <span th:text="${event.startDate}"></span>
             </td>
             <td>
-                <span th:text="${event.endData}" ></span>
+                <span th:text="${event.endDate}" ></span>
             </td>
             <td>
                 <span th:text="${event.user.userName}"></span>
@@ -28,12 +28,12 @@
                 <span th:text="${event.developer}"></span>
             </td>
             <td>
-                <form th:if="${event.endData == null}" th:action="@{/events/{id}/delete(id=${event.id})}" th:method="delete">
+                <form th:if="${event.endDate == null}" th:action="@{/events/{id}/delete(id=${event.id})}" th:method="delete">
                     <input class="btn btn-danger" type="submit" value="remove" />
                 </form>
             </td>
             <td>
-                <form th:if="${event.endData == null}" th:action="@{/events/{id}/end(id=${event.id})}" method="post">
+                <form th:if="${event.endDate == null}" th:action="@{/events/{id}/end(id=${event.id})}" method="post">
                     <input class="btn btn-secondary"  type="submit" value="end" />
                 </form>
             </td>
