[Add] space between buttons and forms

--- a/src/main/resources/static/layout.css
+++ b/src/main/resources/static/layout.css
@@ -29,7 +29,7 @@
 }
 
 .app-container {
-    margin-left: 160px; /* Same as the width of the sidenav */
+    margin-left: 160px;
     padding: 0px 10px;
     margin-bottom: 60px;
 }
@@ -37,4 +37,8 @@
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+}
+
+.button-container {
+    margin-top: 5px;
 }
