--- a/src/main/resources/templates/developers/new.html
+++ b/src/main/resources/templates/developers/new.html
@@ -12,8 +12,10 @@
             <select class="form-control" id="selectType" th:field="${technology.technologyName}">
                 <option th:each="technology : ${technologies}" th:value="${technology.technologyName}" th:text="${technology.technologyName}"></option>
             </select>
-            <input class="btn btn-primary" type="submit" value="Submit" />
-            <input class="btn btn-danger" type="reset" value="Reset" />
+            <div class="button-container">
+                <input class="btn btn-primary" type="submit" value="Submit" />
+                <input class="btn btn-danger" type="reset" value="Reset" />
+            </div>
         </form>
     </div>
 </div>
