--- a/src/main/resources/templates/events/new.html
+++ b/src/main/resources/templates/events/new.html
@@ -16,8 +16,10 @@
                         th:text="${developer.toString()}">
                 </option>
             </select>
-            <input class="btn btn-primary" type="submit" value="Submit" />
-            <input class="btn btn-danger" type="reset" value="Reset" />
+            <div class="button-container">
+                <input class="btn btn-primary" type="submit" value="Submit" />
+                <input class="btn btn-danger" type="reset" value="Reset" />
+            </div>
         </form>
     </div>
 </div>
