--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -6,8 +6,10 @@
             <input class="form-control" id="userName" type="text" th:field="*{userName}"/>
             <label for="userSurname" title="Surname">User surname</label>
             <input class="form-control" id="userSurname" type="text" th:field="*{userSurname}" />
-            <input class="btn btn-primary" type="submit" value="Submit" />
-            <input class="btn btn-danger" type="reset" value="Reset" />
+            <div class="button-container">
+                <input class="btn btn-primary" type="submit" value="Submit" />
+                <input class="btn btn-danger" type="reset" value="Reset" />
+            </div>
         </form>
     </div>
 </div>
