--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -14,8 +14,10 @@
                 <option value="Client">Client</option>
                 <option value="ResourceAdministrator">ResourceAdministrator</option>
             </select>
-            <input class="btn btn-primary" type="submit" value="Submit" />
-            <input class="btn btn-danger" type="reset" value="Reset" />
+            <div class="button-container">
+                <input class="btn btn-primary" type="submit" value="Submit" />
+                <input class="btn btn-danger" type="reset" value="Reset" />
+            </div>
         </form>
     </div>
 </div>
