--- a/src/main/resources/templates/developers/edit.html
+++ b/src/main/resources/templates/developers/edit.html
@@ -4,8 +4,10 @@
         <form class="form-group" action="#" th:action="@{/developers/{id}(id=${developer.developerId})}" th:object="${developer}" method="post">
             <label for="developerName" title="Name">Developer name</label>
             <input class="form-control"  id="developerName" type="text" th:field="*{developerName}"/>
+            <div th:if="${#fields.hasErrors('developerName')}" th:errors="*{developerName}" class="alert alert-danger" role="alert"></div>
             <label for="developerSurname" title="Surname">Developer surname</label>
             <input class="form-control" id="developerSurname" type="text" th:field="*{developerSurname}" />
+            <div th:if="${#fields.hasErrors('developerSurname')}" th:errors="*{developerSurname}" class="alert alert-danger" role="alert"></div>
             <label for="selectType">Select technology</label>
             <select class="form-control" id="selectType" th:field="${technology.technologyName}">
                 <option th:each="technology : ${technologies}" th:value="${technology.technologyName}"  th:text="${technology.technologyName}"></option>
