--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -4,8 +4,10 @@
         <form class="form-group" action="#" th:action="@{/users/{id}(id=${user.userId})}" th:object="${user}" method="post">
             <label for="userName" title="Name">User name</label>
             <input class="form-control" id="userName" type="text" th:field="*{userName}"/>
+            <div th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" class="alert alert-danger" role="alert"></div>
             <label for="userSurname" title="Surname">User surname</label>
             <input class="form-control" id="userSurname" type="text" th:field="*{userSurname}" />
+            <div th:if="${#fields.hasErrors('userSurname')}" th:errors="*{userSurname}" class="alert alert-danger" role="alert"></div>
             <div class="button-container">
                 <input class="btn btn-primary" type="submit" value="Submit" />
                 <input class="btn btn-danger" type="reset" value="Reset" />
