--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -9,6 +9,7 @@
             <th scope="col">Remove</th>
             <th scope="col">Edit</th>
             <th scope="col">Activate or deactivate</th>
+            <th scope="col">Info</th>
         </tr>
         </thead>
         <tbody>
@@ -41,6 +42,11 @@
             <td>
                 <form th:action="@{/users/{id}/activate-or-deactivate(id=${user.userId})}" method="get">
                     <input class="btn btn-primary" type="submit" value="activate or deactivate" />
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/users//{id}/info(id=${user.userId})}" method="get">
+                    <input class="btn btn-primary" type="submit" value="info" />
                 </form>
             </td>
         </tr>
