--- a/src/main/resources/templates/developers/edit.html
+++ b/src/main/resources/templates/developers/edit.html
@@ -1,13 +1,21 @@
 <div th:fragment="edit" xmlns:th="http://www.w3.org/1999/xhtml" class="d-flex justify-content-center">
     <div class="d-flex flex-column">
         <h1>Edit Developer</h1>
-        <form class="form-group" action="#" th:action="@{/developers/{id}(id=${developer.developerId})}" th:object="${developer}" method="post">
+        <form class="form-group" action="#" th:action="@{/developers/{id}/{type}(id=${developer.developerId}, type=${developerType.type})}" th:object="${developer}" method="post">
             <label for="developerName" title="Name">Developer name</label>
             <input class="form-control"  id="developerName" type="text" th:field="*{developerName}"/>
             <div th:if="${#fields.hasErrors('developerName')}" th:errors="*{developerName}" class="alert alert-danger" role="alert"></div>
             <label for="developerSurname" title="Surname">Developer surname</label>
             <input class="form-control" id="developerSurname" type="text" th:field="*{developerSurname}" />
             <div th:if="${#fields.hasErrors('developerSurname')}" th:errors="*{developerSurname}" class="alert alert-danger" role="alert"></div>
+            <div th:if="${developerType.type == 'front-end'}">
+                <label for="dummyAttribute" title="DummyAttribute">Dummy Attribute</label>
+                <input class="form-control"  id="dummyAttribute" type="text" th:field="${developer.dummyAttribute}" />
+                <input type="hidden" th:field="${developerType.type}" th:value="front-end">
+            </div>
+            <div th:if="${developerType.type == 'back-end'}">
+                <input type="hidden" th:field="${developerType.type}" th:value="back-end">
+            </div>
             <label for="selectType">Select technology</label>
             <select class="form-control" id="selectType" th:field="${technology.technologyName}">
                 <option th:each="technology : ${technologies}" th:value="${technology.technologyName}"  th:text="${technology.technologyName}"></option>
