--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -45,7 +45,7 @@
                 </form>
             </td>
             <td>
-                <form th:action="@{/users//{id}/info(id=${user.userId})}" method="get">
+                <form th:action="@{/users/{id}/info(id=${user.userId})}" method="get">
                     <input class="btn btn-primary" type="submit" value="info" />
                 </form>
             </td>
