--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,22 +1,13 @@
 <div th:fragment="navbar" xmlns:th="http://www.w3.org/1999/xhtml">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h1 class="navbar-brand">Catchy application name</h1>
-
-<!--        <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--            <ul class="navbar-nav mr-auto">-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" th:href="@{/developers}">Developers<span class="sr-only">(current)</span></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" th:href="@{/users}">Users<span class="sr-only">(current)</span></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" th:href="@{/events}">Events<span class="sr-only">(current)</span></a>-->
-<!--                </li>-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" th:href="@{/technologies}">Technologies<span class="sr-only">(current)</span></a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
+        <form  th:action="@{/users/search}" th:if="${page == 'users/index'}" class="form-inline my-2 my-lg-0">
+            <input th:name="name" class="form-control mr-sm-2" type="search" placeholder="Search by name" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        <form  th:action="@{/developers/search}" th:if="${page == 'developers/index'}" class="form-inline my-2 my-lg-0">
+            <input th:name="name"  class="form-control mr-sm-2" type="search" placeholder="Search by name" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
     </nav>
 </div>
